--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: top/100% url(noir.jpg);
+  background: top/100% url(../Images/noir.jpg);
   margin: 0;
     padding: 0;
   font-family: "Open Sans", serif;
@@ -29,7 +29,7 @@ ul li a:hover {
   color: #666;
 }
 .menu {
-  background: #000;
+  background: #000000;
   /* #604022;*/
   /*opacity: 0.8;*/
   height: 80px;
@@ -39,8 +39,7 @@ ul li a:hover {
   color: white;
 }
 .center {
-  background: no-repeat top/100% url(cover_p.jpg);
-  /*height: 90%;*/
+  background: no-repeat top/100% url(../Images/cover_p.jpg);
   padding: 26%;
   text-align: center;
   color: white;
@@ -59,15 +58,7 @@ ul li a:hover {
     opacity: 1;
     }
   }
-.apropos {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(600px, auto);
-  padding: 12%;
-  /*height: 90%;*/
-  animation: fadeIn 3s;
-}
+
 .left {
   grid-column: 1;
   grid-row: 1;
@@ -87,29 +78,32 @@ ul li a:hover {
   vertical-align: middle;
   width: 100%;
 }
+
 .objets {
   padding-top: 0px;
-  padding-right: 14%;
   padding-bottom: 120px;
-  padding-left: 14%;
+  animation: fadeIn 3s;
 }
+
+
+
+@media screen and (min-width: 601px) {
+.objets {
+  padding-left: 25%;
+  padding-right: 25%;
+}
+}
+
+@media screen and (max-width: 600px) {
+.objets {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+}
+
 .objets img {
   margin-top: 10px;
   width: 100%;
-}
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
-  }
-}
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
 }
 .image {
   display: block;
