--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ ul li a:hover {
   color: white;
 }
 .center {
-  background: no-repeat top/100% url(cover_p.jpg);
+  background: no-repeat top/100% url(cover2_p.jpg);
   padding: 26%;
   text-align: center;
   color: white;
