--- a/style.css
+++ b/style.css
@@ -136,10 +136,11 @@ ul li a:hover {
   font-size: 12px;
   position: absolute;
   top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  left: 10%;
+  right: 10%;
+  -webkit-transform: translate(-90%, -50%);
+  -ms-transform: translate(-90%, -50%);
+  transform: translate(0%, 0%);
   text-align: justify;
 }
 .text-large {
