--- a/style.css
+++ b/style.css
@@ -187,17 +187,13 @@ ul li a:hover {
   height: auto;
 }
 .form-horizontal {
-  text-align: center;
+  position: absolute;
+  text-align: justify;
   font-weight: lighter;
   color: white;
 }
 
-.form-horizontal a{
-  position: absolute;
-  text-align: center;
-  font-weight: lighter;
-  color: white;
-}
+
 
 input {
   width: 60%;
